# bistouri

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  build.rs  moon.yml  trigger.yaml  tsan_suppressions.txt
.github/workflows/: ci.yml  docs-deploy.yml  docs.yml  validate-k3s.yml
agent/: Cargo.toml  Dockerfile  Makefile
agent/src/: args.rs  daemon.rs  main.rs  telemetry.rs
agent/src/agent/: error.rs  mod.rs  profiler.rs  ringbuf.rs
agent/src/bpf/: profiler.bpf.c  profiler.h
agent/src/capture/: error.rs  exporter.rs  mod.rs  orchestrator.rs  pid_filter.rs  session.rs  trace.rs  vdso.rs
agent/src/sys/: kernel.rs  preflight.rs
agent/src/trigger/: config.rs  error.rs  matcher.rs  mod.rs  proc.rs  psi.rs  trie.rs  watcher.rs
agent/tests/e2e/: cluster.rs  error.rs  grpc_sink.rs  main.rs  metrics.rs  run-e2e-wrapper.sh
agent/tests/e2e/images/: Dockerfile.stress  cpu_burner.c  io_burner.c  mem_burner.c  mem_hog.c
agent/tests/e2e/k8s/: bistouri-agent-pod.yaml  bistouri-daemonset.yaml  bistouriconfig-phase1.yaml  bistouriconfig-phase2.yaml  clusterrole.yaml  clusterrolebinding.yaml  configmap-phase1.yaml  configmap-phase2.yaml  serviceaccount.yaml  workloads.yaml
api/: Cargo.toml  build.rs
api/proto/bistouri/v1/: capture.proto
api/src/: config.rs  cr.rs  lib.rs
deployment/: clusterrole.yaml  clusterrolebinding.yaml  daemonset.yaml  prometheusrule.yaml  serviceaccount.yaml  servicemonitor.yaml
deployment/crd/: bistouriconfig.yaml
docs/: _quarto.yml  custom.scss  ebpf.qmd  index.qmd  overview.qmd  profiler.qmd  symbolizer.qmd  trigger.qmd
scripts/: check_docs.py  generate_docs.py  k3s-helpers.sh
src/: args.rs  daemon.rs  main.rs
src/agent/: mod.rs  profiler.rs  ringbuf.rs
src/bpf/: profiler.bpf.c  profiler.h
src/capture/: error.rs  mod.rs  orchestrator.rs  session.rs  trace.rs
src/sys/: cgroup.rs  kernel.rs  mod.rs  preflight.rs
src/sys/cgroup/: error.rs  mod.rs
src/trigger/: config.rs  error.rs  matcher.rs  mod.rs  proc.rs  psi.rs  watcher.rs
symbolizer/: Cargo.toml  Dockerfile  Makefile
symbolizer/src/: daemon.rs  error.rs  lib.rs  main.rs  model.rs  server.rs  telemetry.rs
symbolizer/src/debuginfod/: filesystem.rs  http.rs  mod.rs  tiered.rs
symbolizer/src/resolve/: build_id.rs  cache.rs  elf.rs  kernel.rs  mod.rs  user.rs
symbolizer/src/sink/: log.rs  mod.rs
symbolizer/tests/e2e/: cluster.rs  error.rs  fixture.rs  kernel_meta.rs  main.rs  metrics.rs  run-e2e-wrapper.sh
symbolizer/tests/e2e/fixtures/: build_fixtures.py  manifest.json
symbolizer/tests/e2e/fixtures/src/: hello.c  multi_dso.c
symbolizer/tests/e2e/images/: Dockerfile.debuginfod
symbolizer/tests/e2e/k8s/: symbolizer-pod.yaml
sys/: Cargo.toml
sys/src/: kernel.rs  lib.rs
tests/e2e/: cluster.rs  error.rs  main.rs  metrics.rs  run-e2e-wrapper.sh  run-e2e.sh
tests/e2e/images/: cpu_burner.c  io_burner.c  mem_hog.c
tests/e2e/k8s/: bistouri-daemonset.yaml  configmap-phase1.yaml  configmap-phase2.yaml  kind-config.yaml  workloads.yaml
tools/crd-gen/: Cargo.toml
tools/crd-gen/src/: main.rs
