[package]
name = "bistouri"
version = "0.1.0"
edition = "2021"

[dependencies]
libbpf-rs = "0.26"
perf-event = "0.4"
tokio = { version = "1.52", features = ["full"] }
anyhow = "1.0"
libc = "0.2"
thiserror = "2.0.18"
inotify = "0.11.1"
futures-util = "0.3.32"
presutaoru = "0.1.0-alpha.3"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
radix_trie = "0.2"
tokio-util = "0.7.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
libbpf-cargo = "0.26"
# Checkout for kernel 6.19
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "5c36ac2080a8d3c1216470ce97e6502ed50272e5" }
