[package]
name = "bistouri-api"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "crd-gen"
path = "src/bin/crd-gen.rs"
# The crd-gen binary requires the kube feature for BistouriConfig::crd().
required-features = ["kube"]

[features]
# Enables JsonSchema derives on config types — required by crd-gen and by the
# agent's KubeConfigWatcher when building the kube::Api client.
schemars = ["dep:schemars"]
# Enables the BistouriConfig CustomResource type (CRD generation + kube watching).
# Implies schemars: CustomResource derive requires JsonSchema on the spec type.
kube = ["dep:kube", "dep:k8s-openapi", "dep:serde_json", "schemars"]

[dependencies]
prost = "0.14"
prost-types = "0.14"
tonic = "0.14"
tonic-prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json  = { version = "1", optional = true }
schemars   = { version = "1", optional = true }
kube       = { version = "3", default-features = false, features = ["derive"], optional = true }
k8s-openapi = { version = "0.27", features = ["v1_31"], optional = true }

[build-dependencies]
tonic-prost-build = "0.14"

