[package]
name = "bistouri-symbolizer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bistouri-api = { path = "../api" }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["transport"] }
tokio-util = { version = "0.7", features = ["rt"] }
prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
# addr2line + gimli + object for ELF/DWARF symbolization.
# `object` must re-export the same version that addr2line/gimli use internally.
addr2line = { version = "0.26", default-features = false, features = ["std", "cpp_demangle", "rustc-demangle", "fallible-iterator", "smallvec"] }
object = { version = "0.39", default-features = false, features = ["read", "elf", "std"] }
gimli = "0.33"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
moka = { version = "0.12", features = ["sync"] }
async-trait = "0.1"
faster-hex = "0.10"

[dev-dependencies]
bistouri-sys = { path = "../sys" }
rstest = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost-types = "0.14"
