[package]
name = "crd-gen"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "crd-gen"
path = "src/main.rs"

[dependencies]
# bistouri-api with the kube feature provides BistouriConfig::crd() and all
# schema types. serde_json is needed to pretty-print the output.
bistouri-api = { path = "../../api", features = ["kube"] }
kube         = { version = "3", default-features = false }
serde_json   = "1"
